<resources>
    <string name="app_name">KeepInTouch</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered? Login here!</string>
    <string name="log_in">Log In</string>
    <string name="register_new_user">Register new User!</string>
    <string name="servival_kit">Servival kit</string>
    <string name="settings">Settings</string>
    <string name="share">share</string>
    <string name="communicate">Communicate</string>
    <string name="groups">Groups</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigatin drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="emergency">Emergency</string>
    <string name="FCM_Auth_KEY">AAAAxfUQTqo:APA91bF5w3CLVh4IE6Rkert2TEYmQtG6jENdRW0MAhfcKxvfXLx9Ay4z5lBwRmgtXMKklcxRSydeoQ2nBnatsN6gB8WTfDnglrTJSkQfWYMmoWh4r_YtGI-AoJ6HXYnH6ERUzi90b8sD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faqs">FAQs</string>
</resources>