<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/groups"
            android:icon="@drawable/ic_groups"
            android:title="@string/groups" />
        <item
            android:id="@+id/servival_kit"
            android:icon="@drawable/ic_sevival_kit"
            android:title="@string/servival_kit" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/log_out"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="Log Out" />

        </menu>
    </item>
</menu>